[package]
name = "ctftime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
tabled = "0.9.0"
tokio = { version = "1", features = ["full"] }
select = "0.6"
colored = "2.0.0"
prettytable-rs = "0.10.0"
chrono = "0.4.23"
