[package]
name = "ctftime"
author = "Gaurav Raj [@thehackersbrain]"
description = "A CLI tool for listing all upcoming CTF events listed on CTFTime.org"
about = "A CLI tool for listing all upcoming CTF events listed on CTFTime.org"
repository = "https://github.com/thehackersbrain/ctftimers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
select = "0.6"
prettytable-rs = "0.10.0"
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive"] }
